--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
