--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-timer-hook": "^3.0.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "video.js": "^7.20.3"
   },
   "devDependencies": {
     "sass": "^1.56.2"
