--- a/app/package.json
+++ b/app/package.json
@@ -15,12 +15,13 @@
     "astro": "^1.6.14",
     "bootstrap": "^5.2.3",
     "next": "13.0.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-timer-hook": "^3.0.5",
+    "redux": "^4.2.0",
     "typescript": "4.9.4",
-    "video.js": "^7.20.3"
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "sass": "^1.56.2"
