--- a/app/package.json
+++ b/app/package.json
@@ -12,16 +12,12 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "astro": "^1.6.14",
     "bootstrap": "^5.2.3",
     "next": "13.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-timer-hook": "^3.0.5",
-    "redux": "^4.2.0",
-    "typescript": "4.9.4",
-    "video-react": "^0.16.0"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "sass": "^1.56.2"
