--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 16
           cache: yarn
+          cache-dependency-path: ./app/yarn.lock
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
