[fix] URL_PREFIX変数の修正．

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -26,6 +26,8 @@ jobs:
       - name: Build
         run: yarn build
         working-directory: ./app
+        env:
+          URL_PREFIX: beauty-measurement-GUI
 
       - name: Export
         run: yarn export
